Allow Webhooks to be disabled

--- a/app/views/webhooks/edit.html.erb
+++ b/app/views/webhooks/edit.html.erb
@@ -12,6 +12,11 @@
     </h2>
 
     <div class="flex flex-column align-start full-width">
+      <%= form.label :active %>
+      <%= form.check_box :active %>
+    </div>
+
+    <div class="flex flex-column align-start full-width">
       <%= form.label :actions %>
       <%= render "webhooks/form/actions", form: form %>
     </div>
